src/components/TopBar/styles.scss
.activeDropdown {
  .active.item {
    border-left: none !important;
  }
}
.top{
  .ui.selection.dropdown {
    border-radius: 20px;
    padding: 0.2em 2.1em 0.78571429em 0.2em;
    min-width:100px;
  }
}

.ui.floating.dropdown > .menu {
  margin-top: 1.15em !important;
}

.ui.active.selection.dropdown {
  border-bottom-left-radius: 20px !important;
  border-bottom-right-radius: 20px !important;
}

.ui.selection.active.dropdown {
  border-color: #e6e6e6 !important;
  box-shadow: none !important;
}

.ui.avatar.image {
  width: 32px;
  height: 32px;
  border-radius: 50px;
}

.ui.dropdown .menu > .item > .image,
.ui.dropdown .menu > .item > img {
  margin-top: 0px;
  margin-bottom: 0px;
  max-height: none;
  width: 32px;
  height: 32px;
}
.ui.menu .ui.dropdown .menu > .item {
  padding: 9px 12px 9px !important;
}

.ui.search.dropdown .menu {
  max-height: 43.028571rem;
}

.ui.mini.image {
  width: 32px;
}

.button:hover {
  p {
    color: #59c4c4 !important;
  }
}

.menu {
  h4,
  p {
    font-family: 'Open Sans', sans-serif;
    font-weight: 400 !important;
    font-size: 14px !important;
  }
}

.ui.selection.active.dropdown .menu{
  border:none;
}

.ui.selection.dropdown .menu{
  max-height:990px;
}

